# adaptive-hierarchical-text-clustering

./: .gitignore  LISCENSE  README.md  pyproject.toml  setup.py
examples/: hierarchy_clustering.py
src/adaptive_hierarchical_text_clustering/: __init__.py  clustering.py
tests/: test_clustering.py
